# ac2015-servant-example

./: .gitignore  LICENSE  README.md  ac2015-servant-example.cabal  package.yaml  stack.yaml
simple/: Main.hs
todo/: Todo.hs
todo-client/: Main.hs
todo-jquery/: Main.hs
todo-server/: Main.hs
todo-server/static/: todo_crud.js
todo-server/templates/: index.html
