name:                ac2015-servant-example
version:             0.1.0.0
synopsis:            Servant Example for Haskell Advent Calendar 2015
description:         Please see README.md
homepage:            https://github.com/lotz84/ac2015-servant-example
license:             BSD3
license-file:        LICENSE
author:              Tatsuya Hirose
copyright:           2015 Tatsuya Hirose
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable simple
  hs-source-dirs:      simple
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , either
                     , QuickCheck
                     , aeson
                     , warp
                     , servant-mock
                     , servant-server
  default-language:    Haskell2010

library
  hs-source-dirs:      todo
  exposed-modules:     Todo
  build-depends:       base
                     , aeson
                     , text
                     , servant
  default-language:    Haskell2010

executable todo-client
  hs-source-dirs:      todo-client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ac2015-servant-example
                     , transformers
                     , either
                     , servant
                     , servant-client
  default-language:    Haskell2010

executable todo-jquery
  hs-source-dirs:      todo-jquery
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ac2015-servant-example
                     , servant-jquery
  default-language:    Haskell2010

executable todo-server
  hs-source-dirs:      todo-server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ac2015-servant-example
                     , containers
                     , transformers
                     , stm
                     , aeson
                     , warp
                     , servant-ede
                     , servant-server
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lotz84/ac2015-servant-example
